fixed some alignment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
 	background-color:white;
 	color:#555;
-	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size:16px;
 	line-height:1.6em;
 	margin:0;
@@ -46,8 +45,7 @@ form
     align-items: center;
     margin: 1.1em;
     padding: auto;
+    display:flex;
 }
-
-
 
 
